# clpp

./: .gitignore  .gitmodules  Folder.DotSettings  LICENSE  README.md  clUtils.DotSettings  clpp.DotSettings
CLInfo/: CLInfo.cpp  CMakeLists.txt  CMakeSettings.json
CLpp/: CLApi.hpp  CLCachedProperty.hpp  CLFunction.hpp  CLPlatform.cpp  CLPlatform.hpp  CLTypeTraits.hpp  CLUtilities.hpp  CLpp.cpp  CMakeLists.txt
CLpp/LibImport/: CMakeLists.txt
CLpp/LibImport/Windows/: LibImp.hpp
clInfo/: CMakeLists.txt  CMakeSettings.json  clInfo.cpp
clUtils/: CMakeLists.txt  CMakeSettings.json  clApi.cpp  clApi.hpp  clFunction.hpp  clLib.cpp  clLib.hpp  clUtilities.hpp  clUtils.cpp  clUtils.hpp
clUtils/libImport/: CMakeLists.txt  lib.cpp  lib.hpp
clUtils/libImport/windows/: libImp.hpp
clpp/: CLPlatform.hpp  CMakeLists.txt  CMakeSettings.json  clApi.cpp  clApi.hpp  clFunction.hpp  clUtilities.cpp  clpp.cpp  clpp.hpp
clpp/cmake/: set_sources.cmake
clpp/libImport/: CMakeLists.txt  lib.cpp  lib.hpp
clpp/libImport/windows/: CMakeLists.txt  libImp.hpp
